# the-london-travel-company

./: .gitignore  Arch.Readme  README.md  Workbook.md  docker-compose.yaml  generate_load.sh  london.db  otel.values.yaml  package-lock.json  package.json
agent/: Dockerfile  Dockerfile.adk  agent.py  config.py  main.py  requirements.txt
agent/tools/: tools.py
agents/: Dockerfile  check_methods.py  deploy.py  main.py  pyproject.toml  requirements.txt
agents/london_agent/: agent.py  config.py  prompts.py  utils.py
agents/london_agent/sub_agents/search_agent/: agent.py  prompts.py  tools.py
agents/london_agent/tools/: tools.py
code/: Dockerfile.adk  Dockerfile.gke  main.py  requirements.txt
code/london-agent/: agent.py  config.py
code/london_agent/: agent.py  config.py  prompts.py
data/: lovecraftian_adventures.json  lovecraftian_locations.json
data/src/: generate_posters.py
data_london/: london_activities.json  london_attractions.json  london_clean.sql
data_london/src/: add_data.py  requirements.txt
deploy/: Helm.md  install_app.sh
deploy/adc_import_export/: export.sh  export_lta-dev-app.json  import.json  import.sh
deploy/ci/: build_images.sh  ci.yaml  setup_infra.sh
deploy/slos/: create_service.sh  slo_badquery.sh  slo_chat_latency.sh  slo_engagement.sh  slo_quota.sh  slo_safety.sh  slo_sentiment.sh  slo_success.sh
frontend/: Dockerfile  entrypoint.sh  nginx.conf  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  vite.config.js
genkit/: package-lock.json  package.json
pgvector/: Dockerfile  init.sql
(+98 files in other folders)
